--- a/arch/arm64/boot/dts/rockchip/rk3588-turing-rk1.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3588-turing-rk1.dtsi
@@ -73,34 +73,42 @@
 
 &cpu_b0 {
 	cpu-supply = <&vdd_cpu_big0_s0>;
+	mem-supply = <&vdd_cpu_big0_s0>;
 };
 
 &cpu_b1 {
 	cpu-supply = <&vdd_cpu_big0_s0>;
+	mem-supply = <&vdd_cpu_big0_s0>;
 };
 
 &cpu_b2 {
 	cpu-supply = <&vdd_cpu_big1_s0>;
+	mem-supply = <&vdd_cpu_big1_s0>;
 };
 
 &cpu_b3 {
 	cpu-supply = <&vdd_cpu_big1_s0>;
+	mem-supply = <&vdd_cpu_big1_s0>;
 };
 
 &cpu_l0 {
 	cpu-supply = <&vdd_cpu_lit_s0>;
+	mem-supply = <&vdd_cpu_lit_mem_s0>;
 };
 
 &cpu_l1 {
 	cpu-supply = <&vdd_cpu_lit_s0>;
+	mem-supply = <&vdd_cpu_lit_mem_s0>;
 };
 
 &cpu_l2 {
 	cpu-supply = <&vdd_cpu_lit_s0>;
+	mem-supply = <&vdd_cpu_lit_mem_s0>;
 };
 
 &cpu_l3 {
 	cpu-supply = <&vdd_cpu_lit_s0>;
+	mem-supply = <&vdd_cpu_lit_mem_s0>;
 };
 
 &gmac1 {
@@ -280,6 +288,59 @@
 	mmc-hs400-1_8v;
 	mmc-hs400-enhanced-strobe;
 	status = "okay";
+};
+
+&soc_thermal {
+	trips {
+		soc_active1: trip-active1 {
+			temperature = <37500>;
+			hysteresis = <1000>;
+			type = "active";
+		};
+		soc_active2: trip-active2 {
+			temperature = <42500>;
+			hysteresis = <2000>;
+			type = "active";
+		};
+		soc_active3: trip-active3 {
+			temperature = <47500>;
+			hysteresis = <2000>;
+			type = "active";
+		};
+		soc_active4: trip-active4 {
+			temperature = <55000>;
+			hysteresis = <2000>;
+			type = "active";
+		};
+		soc_active5: trip-active5 {
+			temperature = <65000>;
+			hysteresis = <2000>;
+			type = "active";
+		};
+	};
+
+	cooling-maps {
+		map1 {
+			trip = <&soc_active1>;
+			cooling-device = <&fan 1 1>;
+		};
+		map2 {
+			trip = <&soc_active2>;
+			cooling-device = <&fan 2 2>;
+		};
+		map3 {
+			trip = <&soc_active3>;
+			cooling-device = <&fan 3 3>;
+		};
+		map4 {
+			trip = <&soc_active4>;
+			cooling-device = <&fan 4 4>;
+		};
+		map5 {
+			trip = <&soc_active5>;
+			cooling-device = <&fan 5 5>;
+		};
+	};
 };
 
 &spi2 {
