arm64: dts: rockchip: rk3588-nanopct6: Enable HDMI0 PHY PLL
Signed-off-by: nyanmisaka <nst799610810@gmail.com>

--- a/arch/arm64/boot/dts/rockchip/rk3588-nanopc-t6.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3588-nanopc-t6.dts
@@ -208,6 +208,11 @@
 	cpu-supply = <&vdd_cpu_big1_s0>;
 };
 
+&display_subsystem {
+	clocks = <&hdptxphy_hdmi_clk0>;
+	clock-names = "hdmi0_phy_pll";
+};
+
 &gpio0 {
 	gpio-line-names = /* GPIO0 A0-A7 */
 			  "", "", "", "",
@@ -936,6 +941,10 @@
 };
 
 &vop_mmu {
+	status = "okay";
+};
+
+&hdptxphy_hdmi_clk0 {
 	status = "okay";
 };
 
