--- a/arch/arm64/boot/dts/rockchip/rk3588-turing-rk1.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3588-turing-rk1.dtsi
@@ -12,6 +12,8 @@
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/pinctrl/rockchip.h>
 #include "rk3588.dtsi"
+#include "rk3588-mpp.dtsi"
+#include "rk3588-rga-multi.dtsi"
 
 / {
 	compatible = "turing,rk1", "rockchip,rk3588";
@@ -611,4 +613,76 @@
 &uart9 {
 	pinctrl-0 = <&uart9m0_xfer>;
 	status = "okay";
+};
+
+&vdpu {
+    status = "okay";
+};
+
+&vdpu_mmu {
+    status = "okay";
+};
+
+&mpp_srv {
+    status = "okay";
+};
+
+&rkvdec_ccu {
+    status = "okay";
+};
+
+&rkvdec0 {
+    status = "okay";
+};
+
+&rkvdec0_mmu {
+    status = "okay";
+};
+
+&rkvdec1 {
+    status = "okay";
+};
+
+&rkvdec1_mmu {
+    status = "okay";
+};
+
+&rkvenc_ccu {
+    status = "okay";
+};
+
+&rkvenc0 {
+    status = "okay";
+};
+
+&rkvenc0_mmu {
+    status = "okay";
+};
+
+&rkvenc1 {
+    status = "okay";
+};
+
+&rkvenc1_mmu {
+    status = "okay";
+};
+
+&rga3_core0 {
+    status = "okay";
+};
+
+&rga3_0_mmu {
+    status = "okay";
+};
+
+&rga3_core1 {
+    status = "okay";
+};
+
+&rga3_1_mmu {
+    status = "okay";
+};
+
+&rga2 {
+    status = "okay";
 };
